Crash when rendering with freestyle #40833

Closed
opened 2014-06-27 09:20:26 +02:00 by Aditia A. Pratama · 21 comments

System Information
Linux 64 bit with geforce GT 635M

Blender Version
Broken: (example: 2.71 0a0e4e0
Worked: (optional) 2.71 9337574

Render with freestyle enabled causing crash. Crash.txt included.
blender.crash.txt

  1. start blender,
  2. enable freestyle,
  3. render,
  4. crash
**System Information** Linux 64 bit with geforce GT 635M **Blender Version** Broken: (example: 2.71 0a0e4e0 Worked: (optional) 2.71 9337574 Render with freestyle enabled causing crash. Crash.txt included. [blender.crash.txt](https://archive.blender.org/developer/F95730/blender.crash.txt) 1. start blender, 2. enable freestyle, 3. render, 4. crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Tamito Kajiyama was assigned by Aditia A. Pratama 2014-06-27 09:20:26 +02:00
Author
Member

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

I could not reproduce the reported crash on Windows. I will try to test on Linux (may take time).

I could not reproduce the reported crash on Windows. I will try to test on Linux (may take time).
Author
Member

So, it's working fine in windows?

So, it's working fine in windows?

Yes, the indicated steps just work fine on Windows. Do you have the same issue with the 2.71 release version?

Yes, the indicated steps just work fine on Windows. Do you have the same issue with the 2.71 release version?
Author
Member

Nope, working fine in 2.71 release

Nope, working fine in 2.71 release
Author
Member

I try clean build again yesterday, but freestyle still fail on my system. Here I try to run with freestyle debug http://www.pasteall.org/52538

Also in crash.txt the problem always occur with this two :
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f2648166ff0]
/lib/x86_64-linux-gnu/libpthread.so.0(pthread_spin_lock+0) [0x7f264cc630f0]

I also attached my cmakecache here, CMakeCache.txt my Boost version: 1.54.0

I try clean build again yesterday, but freestyle still fail on my system. Here I try to run with freestyle debug http://www.pasteall.org/52538 Also in crash.txt the problem always occur with this two : /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f2648166ff0] /lib/x86_64-linux-gnu/libpthread.so.0(pthread_spin_lock+0) [0x7f264cc630f0] I also attached my cmakecache here, [CMakeCache.txt](https://archive.blender.org/developer/F96053/CMakeCache.txt) my Boost version: 1.54.0

This issue was referenced by ea3c2eb15d

This issue was referenced by ea3c2eb15d276bdd27d2144da2d80f6474f96b8e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ea3c2eb15d.

Closed by commit ea3c2eb15d.

Many thanks for the updates. In the Freestyle debug log, the following line seems to show a clue:

Triangles nb : 12 imported, 2684354572 retained

The second number is obviously wrong. I made an attempt to fix it. Any further tests are much appreciated.

Many thanks for the updates. In the Freestyle debug log, the following line seems to show a clue: > Triangles nb : 12 imported, 2684354572 retained The second number is obviously wrong. I made an attempt to fix it. Any further tests are much appreciated.
Author
Member

Still crash on my system, here's the log from debug http://www.pasteall.org/52543

Still crash on my system, here's the log from debug http://www.pasteall.org/52543

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by 6c6fa749f6

This issue was referenced by 6c6fa749f6ee0ff7941696973b4b378a321e5709

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6c6fa749f6.

Closed by commit 6c6fa749f6.

Tried to fix the issue again. Independent testing is much appreciated.

Tried to fix the issue again. Independent testing is much appreciated.
Author
Member

Just test it out and it works now, thanks for the fix. Btw, what happened earlier?

Just test it out and it works now, thanks for the fix. Btw, what happened earlier?

There was an uninitialized variable in the code, which was no apparent problem in the past but became a cause of crashes after recent changes related to multi-threading.

There was an uninitialized variable in the code, which was no apparent problem in the past but became a cause of crashes after recent changes related to multi-threading.
Author
Member

I saw in the log, now FS render back to utilize 1 thread, so it means that multi-threading fail?

I saw in the log, now FS render back to utilize 1 thread, so it means that multi-threading fail?

No, the number of threads shown in the Freestyle debug log was wrong. Fix committed in 944e576717.

No, the number of threads shown in the Freestyle debug log was wrong. Fix committed in 944e576717.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40833
No description provided.