Attempt to fix T40833: Crash when rendering with freestyle.

Constant crashes under Linux seem due to an uninitialized variable.